fixed a bunch of Main layout issues

--- a/src/styles/scss/Accordion.scss
+++ b/src/styles/scss/Accordion.scss
@@ -1,27 +1,30 @@
 // Topelevel Accordian (wrapper)
 
 .Accordion {
-  display: flex;
   position: absolute;
   top: 59px;
   bottom: 0;
   left: 0;
   right: 0;
-  // height: 100%; // incorrect
-  // overflow: hidden; // moved to SideMenu
+  //
+  overflow: scroll;
+  scrollbar-width: none;
+  //
+  padding: 2px 10px 10px 10px;
 }
 
 // Sub level accordian - actual accordion
 
-.accordion {
-  position: relative;
-  flex-grow: 1;
-  padding: 2px 10px 10px 10px;
-  overflow: scroll;
-  width: 100%;
-}
+// .accordionX {
+//   position: relative;
+//   flex-grow: 1;
+//   padding: 2px 10px 10px 10px;
+//   overflow: scroll;
+//   width: 100%;
+//   scrollbar-width: none;
+// }
 
-.accordion::-webkit-scrollbar {
+.Accordion::-webkit-scrollbar {
   display: none;
 }
 
