--- a/src/styles/scss/Main.scss
+++ b/src/styles/scss/Main.scss
@@ -1,10 +1,8 @@
 .Main {
   display: flex;
   position: relative;
-  top: 0;
   z-index: 999;
   user-select: none;
-  height: 100vh;
 }
 
 .accordionSide {
