--- a/src/styles/scss/Page.scss
+++ b/src/styles/scss/Page.scss
@@ -1,36 +1,10 @@
 .page {
-  // border: 3px solid red;
-  // padding: 20px;
-  display: flex;
-  flex-grow: 1;
   margin-top: 58px;
   padding-bottom: 70px;
   //
   overflow-x: overlay;
-  // height: fit-content;
-  height: 100%;
-}
-
-// .page::-webkit-scrollbar {
-//   width: 8px;
-//   height: 8px;
-// }
-
-// .page::-webkit-scrollbar-thumb {
-//   background-color: rgb(218, 218, 218);
-//   border-radius: 4px;
-// }
-
-.page::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
-
-.page::-webkit-scrollbar-thumb {
-  background-color: rgb(134, 134, 134);
-  border-radius: 6px;
-  background-clip: padding-box;
-  border: 3px solid rgba(0, 0, 0, 0);
+  display: flex;
+  flex-grow: 1;
 }
 
 .container {
